--- a/templates/im.html
+++ b/templates/im.html
@@ -1,11 +1,1 @@
-
-{{ chart|safe }}
-
-<!-- <html>
-<head>
-  <title> Plot </title>
-</head>
-<body>
-<!--     <img id="elev" src="data:image/png;base64,{{ im }}"> -->
-<!-- </body --> -->
-    
+{{ data|safe }}
