--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <title>SPA v0.1</title>
+    <title>RPA v0.11</title>
     <link
       rel="stylesheet"
       href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"
